# rules_rs

rs/private/: downloader.bzl
test/git_crates/: Cargo.toml
